--- a/package.json
+++ b/package.json
@@ -16,6 +16,12 @@
   },
   "devDependencies": {
     "sqlite3": "^5.0.2"
+  },
+  {
+  "name": "my-package",
+  "scripts": {
+    "build": "babel src -d lib",
+    "test": "jest"
   }
 }
 
