--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Have you visited all the states?",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
   },
   "author": "David",
   "license": "ISC",
