--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "David",
   "license": "ISC",
   "dependencies": {
+    "core-js": "^3.6.5",
+    "vue": "^3.0.0",
     "express": "^4.17.1",
     "pg": "^8.6.0",
     "sequelize": "^6.6.2",
