undo package.js

--- a/package.json
+++ b/package.json
@@ -4,8 +4,6 @@
   "description": "Have you visited all the states?",
   "main": "server.js",
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "David",
@@ -19,10 +17,7 @@
     "sequelize-cli": "^6.2.0"
   },
   "devDependencies": {
-    "sqlite3": "^5.0.2",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0"
+    "sqlite3": "^5.0.2"
   }
 }
 
